tests/neg-custom-args/captures/vars.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:24:8 ------------------------------------------
24 |    a = x => g(x)      // error
   |        ^^^^^^^^^
   |        Found:    (x: String) ->{cap3} String
   |        Required: (x: String) ->{cap1} String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:25:8 ------------------------------------------
25 |    a = g      // error
   |        ^
   |        Found:    (x: String) ->{cap3} String
   |        Required: (x: String) ->{cap1} String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:27:12 -----------------------------------------
27 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[box String ->{cap3} String]
   |        Required: List[box String ->{cap1, cap2} String]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:36:8 ------------------------------------------
36 |  local { cap3 => // error
   |        ^
   |        Found:    (cap3: CC^) ->? box String ->{cap3} String
   |        Required: (cap3: CC^) -> box String ->? String
   |
   |        Note that reference cap3.type
   |        cannot be included in outer capture set ?
37 |    def g(x: String): String = if cap3 == cap3 then "" else "a"
38 |    g
39 |  }
   |
   | longer explanation available when compiling with `-explain`
